fix: resolve admin issue